# MLSystemDesignCourse

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_test.py
app/: data_loader.py  main.py  planner.py
app/static/: app.js  favorites.html  favorites.js  index.html  plan.html  plan.js  questionnaire.js  styles.css  viewed.html  viewed.js
docs/: ml_system_design_doc.md
src/: DataPreparation.ipynb  EDA-receipt.ipynb
